# gcp-dataflow-pipeline-blueprint

./: Dockerfile  README.md  csv_to_avro.py  csv_to_parquet.py  metadata.json  pyproject.toml  requirements.txt  sample-pipeline.py
docs/how-to-create-dataflow-job-flex-template/: build-and-deploy-dataflow-flex-template-job.md
modules/: BeamUtils.py  BigQueryUtils.py  Combiners.py  Converters.py  Filters.py  IngestTransforms.py  JoinTransforms.py  Mappers.py  Names.py  OutputTransforms.py  Parsers.py  RowModelTransforms.py  RowModels.py
terraform/: bigquery.tf  gar.tf  gcs.tf  locals.tf  main.tf  providers.tf  service-accounts.tf  variables.tf  versions.tf  vpc.tf
terraform/bootstrap/: main.tf  variables.tf
terraform/bq-routines/: df_processed_for_dates_func.tftpl
terraform/bq-schemas/: df_processed_data.json
terraform/bq-views/: df_processed_view.tftpl
terraform/sample-input-data/: avro_data.csv  parquet_data.csv  regions_data.csv  sample_data.csv
terraform/sample-input-data/avro/: sample_avro.avsc  sample_avro_data.avro
terraform/sample-input-data/parquet/: sample_parquet_data.parquet
tests/: conftest.py  test_Filters.py  test_Mappers.py
