[project]
name = "modules"
version = "0.0.1"
authors = [
  { name="Tim Antrobus", email="tim.antrobus@bjss.com" },
]
description = "Dataflow ETL pipeline package"
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["tests","tests.*"]